# trivia-battle

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  run.bash  start.sh
abi/: Cargo.toml
abi/src/: contract.rs  leaderboard.rs  lib.rs  management.rs  player_profile.rs  player_stats.rs  service.rs  trivia.rs
bankroll/: Cargo.toml
bankroll/src/: contract.rs  lib.rs  service.rs  state.rs
frontend/: README.md  package.json  pubspec.yaml  vercel.json
frontend/android/: local.properties
frontend/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
frontend/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
frontend/lib/: main.dart
frontend/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
frontend/test/: widget_test.dart
frontend/web/: index.html
master/: Cargo.toml
master/src/: contract.rs  lib.rs  service.rs  state.rs
trivia/: Cargo.toml
trivia/src/: contract.rs  game.rs  lib.rs  service.rs  state.rs
