[workspace]
members = [
    "abi",
    "bankroll",
    "trivia",
    "master",
]

# Optional: common settings
[workspace.dependencies]
linera-sdk = "0.15.5"
async-graphql = "7.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true