[package]
name = "master"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Linera SDK (This handles async-graphql internally)
linera-sdk = "0.15.8"
linera-views = "0.15.8"
async-trait = "0.1"
async-graphql = "7.0.17"
serde = { version = "1.0", features = ["derive"] }
bcs = "0.1"

# Shared logic from your project
abi = { path = "../abi" }
trivia = { path = "../trivia" }

[features]
default = ["linera-sdk/wasmer"]
